// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Management Queries when fetching schemas (/admin/) should return the expected result 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "271",
    "content-type": "text/html; charset=iso-8859-1",
    "date": "Tue, 20 Sep 2022 21:22:31 GMT",
    "server": "Apache/2.4.41 (Ubuntu)",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
    "url": "http://127.0.0.1:37831admin",
  },
  "status": 404,
  "text": "<!DOCTYPE HTML PUBLIC \\"-//IETF//DTD HTML 2.0//EN\\">
<html><head>
<title>404 Not Found</title>
</head><body>
<h1>Not Found</h1>
<p>The requested URL was not found on this server.</p>
<hr>
<address>Apache/2.4.41 (Ubuntu) Server at 127.0.0.1 Port 80</address>
</body></html>
",
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for user groups when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "description": "This group is for members of the community only.",
    "id": "1",
    "label": "community members",
    "users": Array [
      Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    ],
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for user groups when fetching all groups should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "description": "This group is for members of the community only.",
        "id": "1",
        "label": "community members",
        "users": Array [
          Object {
            "id": "1",
            "profile": Object {
              "email": "llcj1985@aol.com",
              "name": Object {
                "firstName": "James",
                "lastName": "Jones",
              },
            },
            "roles": Array [
              "viewer",
            ],
            "username": "cool-james",
          },
        ],
      },
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for users when fetching a user by ID when there is a user with the given ID should find the user 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "id": "1",
    "profile": Object {
      "email": "llcj1985@aol.com",
      "name": Object {
        "firstName": "James",
        "lastName": "Jones",
      },
    },
    "roles": Array [
      "viewer",
    ],
    "username": "cool-james",
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for users when fetching all users should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for user groups when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "description": "This group is for members of the community only.",
    "id": "1",
    "label": "community members",
    "users": Array [
      Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    ],
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for user groups when fetching all groups should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "description": "This group is for members of the community only.",
        "id": "1",
        "label": "community members",
        "users": Array [
          Object {
            "id": "1",
            "profile": Object {
              "email": "llcj1985@aol.com",
              "name": Object {
                "firstName": "James",
                "lastName": "Jones",
              },
            },
            "roles": Array [
              "viewer",
            ],
            "username": "cool-james",
          },
        ],
      },
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for users when fetching a user by ID when there is a user with the given ID should find the user 1`] = `
Object {
  "actions": Array [],
  "data": Object {
    "id": "1",
    "profile": Object {
      "email": "llcj1985@aol.com",
      "name": Object {
        "firstName": "James",
        "lastName": "Jones",
      },
    },
    "roles": Array [
      "viewer",
    ],
    "username": "cool-james",
  },
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for users when fetching all users should return the expected result 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "id": "1",
        "profile": Object {
          "email": "llcj1985@aol.com",
          "name": Object {
            "firstName": "James",
            "lastName": "Jones",
          },
        },
        "roles": Array [
          "viewer",
        ],
        "username": "cool-james",
      },
    },
  ],
}
`;
